# Painter-for-UNIX

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  default.profraw
App/: CMakeLists.txt  main.cpp  resources.qrc
App/qml/: CanvasToolBar.qml  DrawingSurface.qml  Main.qml  PainterCanvasPage.qml
docs/: app_structure.md
packaging/macos/: README.md
resources/: icon.icns
